--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.7",
+    "@angular/common": "^9.0.0-rc.7",
+    "@angular/compiler": "^9.0.0-rc.7",
+    "@angular/core": "^9.0.0-rc.7",
+    "@angular/elements": "^9.0.0-rc.7",
+    "@angular/forms": "^9.0.0-rc.7",
+    "@angular/platform-browser": "^9.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.7",
+    "@angular/router": "^9.0.0-rc.7",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^4.0.0",
+    "@swimlane/docspa-core": "^4.2.0",
     "@swimlane/docspa-remark-preset": "^2.0.1",
     "@swimlane/docspa-stackblitz": "^4.0.0",
     "@swimlane/ngx-charts": "^12.0.1",
@@ -59,27 +59,28 @@
     "rxjs": "^6.5.4",
     "smoothscroll-polyfill": "^0.4.3",
     "transformation-matrix": "^1.15.3",
+    "tslib": "^1.10.0",
     "url-resolve": "^1.0.0",
     "vfile": "^3.0.0",
     "vfile-reporter": "^5.1.1",
     "webcola": "^3.3.8",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular-devkit/build-ng-packagr": "^0.803.21",
-    "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.7",
+    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.7",
+    "@angular/cli": "^9.0.0-rc.7",
+    "@angular/compiler-cli": "^9.0.0-rc.7",
+    "@angular/language-service": "^9.0.0-rc.7",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
-    "@types/node": "^13.1.4",
+    "@types/node": "^12.11.1",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^3.0.2",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "^5.1.2",
     "cross-env": "^6.0.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -88,14 +89,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0-rc.3",
     "prettier": "^1.19.1",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
-    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-swimlane": "^4.0.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.6.4"
   }
 }
