--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "^9.0.0-rc.7",
+    "@angular/cdk": "^9.0.0-rc.7",
     "@angular/common": "^9.0.0-rc.7",
     "@angular/compiler": "^9.0.0-rc.7",
     "@angular/core": "^9.0.0-rc.7",
@@ -36,7 +37,7 @@
     "@swimlane/docspa-core": "^5.0.0-7",
     "@swimlane/docspa-remark-preset": "^5.0.0-0",
     "@swimlane/docspa-stackblitz": "^4.0.0",
-    "@swimlane/ngx-charts": "^12.0.1",
+    "@swimlane/ngx-charts": "^13.0.1",
     "@types/d3-ease": "^1.0.8",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
@@ -74,6 +75,7 @@
     "@angular/cli": "^9.0.0-rc.7",
     "@angular/compiler-cli": "^9.0.0-rc.7",
     "@angular/language-service": "^9.0.0-rc.7",
+    "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -99,5 +101,17 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-swimlane": "^4.0.0",
     "typescript": "~3.6.4"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "crypto": false,
+    "stream": false,
+    "http": false,
+    "tls": false,
+    "zlib": false,
+    "https": false,
+    "net": false
   }
 }
