--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "predeploy-docs": "npm run build-docs ",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "npm run build && start-server-and-test start http-get://localhost:4200 cypress",
-    "publish": "npm publish projects/dist/ngx-graph"
+    "publish": "npm publish projects/dist/ngx-graph --tag vnext"
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.7",
+    "@angular/animations": "^9.0.0-rc.8",
     "@angular/cdk": "^9.0.0-rc.7",
-    "@angular/common": "^9.0.0-rc.7",
-    "@angular/compiler": "^9.0.0-rc.7",
-    "@angular/core": "^9.0.0-rc.7",
-    "@angular/elements": "^9.0.0-rc.7",
-    "@angular/forms": "^9.0.0-rc.7",
-    "@angular/platform-browser": "^9.0.0-rc.7",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.7",
-    "@angular/router": "^9.0.0-rc.7",
+    "@angular/common": "^9.0.0-rc.8",
+    "@angular/compiler": "^9.0.0-rc.8",
+    "@angular/core": "^9.0.0-rc.8",
+    "@angular/elements": "^9.0.0-rc.8",
+    "@angular/forms": "^9.0.0-rc.8",
+    "@angular/platform-browser": "^9.0.0-rc.8",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.8",
+    "@angular/router": "^9.0.0-rc.8",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
@@ -54,6 +54,7 @@
     "d3-transition": "^1.1.3",
     "dagre": "^0.8.4",
     "deepmerge": "^4.2.2",
+    "mdast": "^3.0.0",
     "ngx-logger": "^4.0.8",
     "path": "^0.12.7",
     "process": "^0.11.10",
@@ -70,11 +71,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.7",
-    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.7",
-    "@angular/cli": "^9.0.0-rc.7",
-    "@angular/compiler-cli": "^9.0.0-rc.7",
-    "@angular/language-service": "^9.0.0-rc.7",
+    "@angular-devkit/build-angular": "~0.900.0-rc.8",
+    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.8",
+    "@angular/cli": "^9.0.0-rc.8",
+    "@angular/compiler-cli": "^9.0.0-rc.8",
+    "@angular/language-service": "^9.0.0-rc.8",
     "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~2.8.6",
@@ -93,7 +94,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^9.0.0-rc.3",
+    "ng-packagr": "^9.0.0-rc.7",
     "prettier": "^1.19.1",
     "protractor": "^5.4.0",
     "ts-node": "~5.0.1",
