--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.8",
-    "@angular/cdk": "^9.0.0-rc.7",
-    "@angular/common": "^9.0.0-rc.8",
-    "@angular/compiler": "^9.0.0-rc.8",
-    "@angular/core": "^9.0.0-rc.8",
-    "@angular/elements": "^9.0.0-rc.8",
-    "@angular/forms": "^9.0.0-rc.8",
-    "@angular/platform-browser": "^9.0.0-rc.8",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.8",
-    "@angular/router": "^9.0.0-rc.8",
+    "@angular/animations": "^9.0.5",
+    "@angular/cdk": "^9.1.2",
+    "@angular/common": "^9.0.5",
+    "@angular/compiler": "^9.0.5",
+    "@angular/core": "^9.0.5",
+    "@angular/elements": "^9.0.5",
+    "@angular/forms": "^9.0.5",
+    "@angular/platform-browser": "^9.0.5",
+    "@angular/platform-browser-dynamic": "^9.0.5",
+    "@angular/router": "^9.0.5",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
@@ -74,8 +74,8 @@
     "@angular-devkit/build-angular": "~0.900.0-rc.8",
     "@angular-devkit/build-ng-packagr": "~0.900.0-rc.8",
     "@angular/cli": "^9.0.0-rc.8",
-    "@angular/compiler-cli": "^9.0.0-rc.8",
-    "@angular/language-service": "^9.0.0-rc.8",
+    "@angular/compiler-cli": "^9.0.5",
+    "@angular/language-service": "^9.0.5",
     "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^2.0.0",
     "@types/jasmine": "~2.8.6",
