--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "7.0.0-rc.1",
+  "version": "7.0.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
