--- a/package.json
+++ b/package.json
@@ -77,32 +77,32 @@
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
     "@babel/core": "^7.7.7",
-    "@swimlane/prettier-config-swimlane": "^2.0.0",
-    "@types/jasmine": "~2.8.6",
+    "@swimlane/prettier-config-swimlane": "^3.0.1",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/node": "^12.12.34",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^5.1.2",
-    "cross-env": "^6.0.3",
-    "husky": "^4.2.3",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "codelyzer": "^5.2.2",
+    "cross-env": "^7.0.2",
+    "husky": "^4.2.4",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.1",
+    "karma": "^5.0.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "ng-packagr": "^9.0.3",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "protractor": "^5.4.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.11.0",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.8.2",
+    "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.17.0",
-    "tslint-config-swimlane": "^4.0.0",
+    "tslint-config-swimlane": "^5.0.0",
     "typescript": "~3.8.0"
   },
   "browser": {
