--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
     "ng-packagr": "^9.0.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "^5.4.3",
@@ -105,6 +106,7 @@
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
     "tslint-config-prettier": "^1.17.0",
+    "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
     "typescript": "~3.8.0"
   },
