--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -47,6 +47,7 @@
     "d3-transition": "^1.1.1",
     "dagre": "^0.8.4",
     "transformation-matrix": "^1.15.3",
+    "tslib": "^2.0.0",
     "webcola": "^3.3.8"
   }
 }
