--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish projects/dist/ngx-graph",
     "publish": "run-s publish:lib deploy-docs",
-    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1"
+    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.1.2",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/elements": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "^10.1.2",
+    "@angular/cdk": "^10.2.1",
+    "@angular/common": "^10.1.2",
+    "@angular/compiler": "^10.1.2",
+    "@angular/core": "^10.1.2",
+    "@angular/elements": "^10.1.2",
+    "@angular/forms": "^10.1.2",
+    "@angular/platform-browser": "^10.1.2",
+    "@angular/platform-browser-dynamic": "^10.1.2",
+    "@angular/router": "^10.1.2",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
     "@swimlane/docspa-core": "^5.0.0",
     "@swimlane/docspa-remark-preset": "^5.0.0",
     "@swimlane/docspa-stackblitz": "^4.0.0",
-    "@swimlane/ngx-charts": "^13.0.1",
+    "@swimlane/ngx-charts": "^16.0.0",
     "@types/d3-ease": "^1.0.8",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
@@ -69,7 +70,7 @@
     "smoothscroll-polyfill": "^0.4.3",
     "throttleit": "^1.0.0",
     "transformation-matrix": "^1.15.3",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "url-resolve": "^1.0.0",
     "vfile": "^4.0.0",
     "vfile-reporter": "^5.1.1",
@@ -77,11 +78,11 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular-devkit/build-ng-packagr": "~0.901.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
+    "@angular-devkit/build-angular": "~0.1001.2",
+    "@angular-devkit/build-ng-packagr": "~0.1001.2",
+    "@angular/cli": "^10.1.2",
+    "@angular/compiler-cli": "^10.1.2",
+    "@angular/language-service": "^10.1.2",
     "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "^3.5.10",
@@ -94,25 +95,25 @@
     "codelyzer": "^5.2.2",
     "cross-env": "^7.0.2",
     "husky": "^4.2.4",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.1",
-    "karma": "^5.0.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "ng-packagr": "^9.0.3",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
-    "protractor": "^5.4.3",
+    "protractor": "~7.0.0",
     "start-server-and-test": "^1.10.11",
     "ts-node": "^8.8.2",
-    "tslint": "^6.1.1",
+    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-security": "^1.16.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~3.8.0"
+    "typescript": "~3.9.7"
   },
   "browser": {
     "fs": false,
