--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -37,7 +37,7 @@
     "rxjs": "6.x"
   },
   "dependencies": {
-    "@swimlane/ngx-charts": "^13.0.1",
+    "@swimlane/ngx-charts": "^16.0.0",
     "d3-dispatch": "^1.0.3",
     "d3-ease": "^1.0.5",
     "d3-force": "^1.1.0",
@@ -47,6 +47,7 @@
     "d3-transition": "^1.1.1",
     "dagre": "^0.8.4",
     "transformation-matrix": "^1.15.3",
+    "tslib": "^2.0.0",
     "webcola": "^3.3.8"
   }
 }
