--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -6,20 +6,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Use Node.js 12.x
-        uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
           node-version: 12.x
 
       - name: Install
-        run: |
-          npm ci
-        env:
-          CI: true
+        uses: bahmutov/npm-install@v1
 
       - name: Build
         run: |
-          npm run build
+          npm run build --if-present
         env:
           CI: true
 
@@ -31,7 +28,7 @@ jobs:
 
       - name: Prepare and deploy
         run: |
-          npm run deploy-docs -- --name="Swimlane" --email="swimlane-devops@swimlane.com" --no-silent
+          npm run deploy-docs -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
           CI: true
