--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
     "@types/d3-transition": "^1.1.4",
+    "@ungap/custom-elements": "^0.1.12",
     "@ungap/global-this": "^0.3.1",
-    "@webcomponents/custom-elements": "^1.3.1",
     "core-js": "^2.5.4",
     "d3-dispatch": "^1.0.5",
     "d3-ease": "^1.0.5",
