--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "prettier": "prettier --write \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
     "prettier:ci": "prettier --check  \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
-    "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
+    "copy-files": "cp README.md dist/ngx-graph/README.md && cp LICENSE dist/ngx-graph/LICENSE && cp CHANGELOG.md dist/ngx-graph/CHANGELOG.md",
     "ci": "run-s lint prettier:ci",
     "preversion": "npm run ci",
     "package": "run-s build:lib copy-files",
@@ -47,7 +47,7 @@
     "msagl-js": "0.0.51",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rxjs": "7.8.1",
+    "rxjs": "^7.8.1",
     "transformation-matrix": "^2.16.1",
     "tslib": "^2.3.1",
     "webcola": "^3.4.0",
