--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "9.0.0-beta.3",
+  "version": "9.0.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -40,7 +40,7 @@
     "d3-dispatch": "^3.0.1",
     "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
-    "d3-scale": "^3.2.3",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-timer": "^3.0.1",
