--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@angular-eslint/eslint-plugin-template": "^18.4.0",
     "@angular-eslint/schematics": "~18.1.0",
     "@angular-eslint/template-parser": "^18.4.0",
-    "@angular/cli": "~18.1.0",
+    "@angular/cli": "19.1.5",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
     "@babel/core": "^7.7.7",
