--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
         "@angular-eslint/no-output-native": "off",
         "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/no-duplicate-enum-values": "off",
-        "@angular-eslint/prefer-standalone": "off"
+        "@angular-eslint/prefer-standalone": "off",
+        "@angular-eslint/prefer-inject": "off"
       }
     }
   ]
